k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bloodbank-ingress
  namespace: sheren04-dev
  annotations:
    route.openshift.io/termination: "edge"        # ← enables HTTPS
spec:
  rules:
  - host: frontend-service-sheren04-dev.apps.rm2.thpm.p1.openshiftapps.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8080
  tls:
  - hosts:
    - frontend-service-sheren04-dev.apps.rm2.thpm.p1.openshiftapps.com
